# flippy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  logo.txt
f0/: flip.toml
src/: art.rs  commands.rs  flipper.rs  git.rs  main.rs  progress.rs  types.rs  validators.rs  walking_diff.rs
src/commands/: firmware.rs  map.rs  new.rs  repo.rs  store.rs  upload.rs
src/commands/upload/: diff.rs  pathspec.rs
src/git/: clone.rs  diff.rs  fetch.rs  remote.rs
src/types/: directory.rs  firmware.rs  flip.rs  mapping.rs  remote_sync_file.rs  repository.rs
src/walking_diff/: diff.rs  tree.rs
