[package]
name = "flippy"
version = "0.2.0"
rust-version = "1.86.0"
edition = "2024"

[dependencies]
# Errors & logging
anyhow = { version = "1.0.98", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Cli stuff
clap = { version = "4.5.39", features = ["derive"] }
cliclack = { version = "0.3.6", default-features = false }

# Flipper
flipper-rpc = { version = "0.6.2", features = ["fs-all", "tracing", "transport-serial-optimized", "transport-serial-optimized-large-stack-limit"] }

# Git (gix)
gix = { version = "0.72.1", features = [
  "max-performance", # < what it says
  "comfort", # Pretty printing prodash
  "extras",
  #"worktree-mutation",
  "blocking-http-transport-curl-rustls",
  ], default-features = false }

## See [patch.crates-io] below
prodash = { version = "29.0.2", default-features = false, features = [
  "progress-tree",
  "local-time",
  "unit-human",
  "unit-bytes",
  "unit-duration",
  "render-line",
  "render-line-crossterm",
  "render-line-autoconfigure"
]}

# Projects
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

# Repos
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v5", "serde"] }

# Parsing firmware update directory servers
reqwest = { version = "0.12.19", default-features = false, features = [ "rustls-tls" ] }
serde_json = "1.0.140"

# Async
tokio = { version = "1.45.1", features = ["full"] }

# Pretty times
jiff = "0.2.15"

# Calculate MD5 hashes for trees
md5 = "0.7.0"

# Diff trees
fxhash = "0.2.1"
hyperloglockless = "0.1.0"

# TODO: Remove when gix fixes prodash version
[patch.crates-io]
prodash = { version = "29.0.2", git = "https://github.com/elijah629/prodash" }
