[package]
name = "flippy"
version = "0.4.1"
rust-version = "1.87.0"
edition = "2024"
license = "MIT"
description = "Automates upgrades and pulls remote databases, files, and firmware for the Flipper Zero"
repository = "https://github.com/elijah629/flippy"
documentation = "https://docs.rs/flippy"

[dependencies]
# Errors & logging
anyhow = { version = "1.0.98" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

# Cli stuff
clap = { version = "4.5.39", features = ["derive"] }
cliclack = { version = "0.3.6", default-features = false }

# Flipper RPC (made by me)
flipper-rpc = { version = "0.9.3", features = ["fs-createdir", "fs-readdir", "fs-remove", "fs-progress-mpsc", "tracing", "transport-serial-optimized", "transport-serial-optimized-large-stack-limit"] }

# Git (gix)
gix = { version = "0.72.1", features = [
  "max-performance", # < what it says
  "comfort", # Pretty printing prodash
  "extras",
  "blocking-http-transport-curl-rustls",
  ], default-features = false }

## See [patch.crates-io] below
prodash = { version = "29.0.2", default-features = false, features = [
  "progress-tree",
  "local-time",
  "unit-human",
  "unit-bytes",
  "unit-duration",
  "render-line",
  "render-line-crossterm",
  "render-line-autoconfigure"
]}

# Projects
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

# Repos
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v5", "serde"] }

# Parsing firmware update directory servers
reqwest = { version = "0.12.19", default-features = false, features = [ "rustls-tls", "json", "stream" ] }

# Async
tokio = { version = "1.45.1", features = ["full"] }

# Pretty times
jiff = "0.2.15"

# Calculate MD5 hashes for trees and files
md5 = "0.8.0"
hex = "0.4.3"

# Diff trees
fxhash = "0.2.1"
hyperloglockless = "0.1.0"
futures-util = "0.3.31"

# Updating
tar = "0.4.44"
flate2 = "1.1.2"
sha2 = "0.10.9"
tracing-error = "0.2.1"

[patch.crates-io]
# TODO: Remove when gix fixes prodash version
prodash = { version = "29.0.2", git = "https://github.com/elijah629/prodash" }

# This is overkill but rust needs to appear BLAZINGLY FAST
# Compile time with all: ~2m 23s :skull: It goes from a 200+ MB file to 13.8MB though!
[profile.release-hyper]
inherits = "release"
lto = true # Super small!
opt-level = 3 # Super fast!
codegen-units = 1 # Super slow build times, but super small (note: too fucking slow)
strip = true # EVEN SMALLER! (note: useful for debugging)
